--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,19 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration-ms=86400000
+
+
+# RabbitMQ Configuration för CloudAMQP
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST:/}
+
+# Viktigt: Använd TLS/SSL
+spring.rabbitmq.ssl.enabled=true
+spring.rabbitmq.ssl.algorithm=TLSv1.2
+
+# Connection settings
+spring.rabbitmq.template.receive-timeout=30000
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
