--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,7 @@ spring.rabbitmq.ssl.algorithm=TLSv1.2
 # Connection settings
 spring.rabbitmq.template.receive-timeout=30000
 spring.rabbitmq.listener.simple.acknowledge-mode=auto
+
+# Logging
+logging.level.com.amanda.weather_app_auth.security.jwt=DEBUG
+logging.level.org.springframework.security=DEBUG
