chore(docs): add README.md with project description, endpoints, cookie settings and production checklist.
Change: logging from debug to info in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,4 @@ spring.rabbitmq.template.receive-timeout=30000
 spring.rabbitmq.listener.simple.acknowledge-mode=auto
 
 # Logging
-logging.level.com.amanda.weather_app_auth.security.jwt=DEBUG
-logging.level.org.springframework.security=DEBUG
+logging.level.com.amanda.weather_app_auth=INFO
