chore(prod): update cookie settings to samesite none and secure true before hosting
change: jwt and cookie expiration time to one week during developement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT
 jwt.secret=${JWT_SECRET}
-jwt.expiration-ms=86400000
+jwt.expiration-ms=8604800000
 
 
 # RabbitMQ Configuration för CloudAMQP
