add: logging in handleUserLookup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ spring.rabbitmq.listener.simple.acknowledge-mode=auto
 
 # Logging
 logging.level.com.amanda.weather_app_auth=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.amqp=INFO
