--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -1,9 +1,9 @@
 name: Keep Render Awake
 
-on:
-  schedule:
-    - cron: "*/14 * * * *"
-  workflow_dispatch:
+# on:
+#  schedule:
+#    - cron: "*/14 * * * *"
+#  workflow_dispatch:
 
 jobs:
   ping:
